12588
The error message improvement now shows the expansion, which can be tricky to visualize.
{noformat}
scala> var b1 = 0.toByte ; b1 ^= b1
<console>:13: error: value ^= is not a member of Byte
  Expression does not convert to assignment because:
    type mismatch;
     found   : Int
     required: Byte
    expansion: this.b1 = this.b1.^(b1)
        b1 ^= b1
           ^

scala> val as, bs = new Array[Byte](10)
as: Array[Byte] = Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
bs: Array[Byte] = Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

scala> as(4) ^= bs(5)
<console>:14: error: value ^= is not a member of Byte
  Expression does not convert to assignment because:
    type mismatch;
     found   : Int
     required: Byte
    expansion: as.update(4, as.apply(4).^(bs(5)))
       as(4) ^= bs(5)
             ^
{noformat}
It would be nice to highlight the error in the expansion without adding a caret line.
